--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ utils/__pycache__/data_utils.cpython-311.pyc
 utils/__pycache__/model_utils.cpython-311.pyc
 utils/__pycache__/real_time_utils.cpython-311.pyc
 
+examples/NVCh_10h_continuous_trace.zip
+
